src/objects/TimeTrackerConfigSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Code1__c</fullName>
        <description>Manual- Case or Account Link
Strategy- Implementation class Name</description>
        <label>Code 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code2__c</fullName>
        <label>Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text1__c</fullName>
        <description>Manual- Activity
Strategy- Activity</description>
        <label>Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text2__c</fullName>
        <label>Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text3__c</fullName>
        <label>Text 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <externalId>true</externalId>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Time Tracker Config Settings</label>
    <listViews>
        <fullName>All_TimeTracker_settings</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All TimeTracker settings</label>
    </listViews>
    <listViews>
        <fullName>Custom_Event</fullName>
        <columns>NAME</columns>
        <columns>Code1__c</columns>
        <columns>Code2__c</columns>
        <columns>Flag1__c</columns>
        <columns>Flag2__c</columns>
        <columns>Flag3__c</columns>
        <columns>Flag4__c</columns>
        <columns>Text1__c</columns>
        <columns>Text2__c</columns>
        <columns>Text3__c</columns>
        <columns>Text4__c</columns>
        <columns>Text5__c</columns>
        <columns>Text6__c</columns>
        <columns>Text7__c</columns>
        <columns>Text8__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Custom Event</value>
        </filters>
        <label>Custom Events</label>
    </listViews>
    <listViews>
        <fullName>Manual</fullName>
        <columns>NAME</columns>
        <columns>Code1__c</columns>
        <columns>Code2__c</columns>
        <columns>Flag1__c</columns>
        <columns>Flag2__c</columns>
        <columns>Flag3__c</columns>
        <columns>Flag4__c</columns>
        <columns>Text1__c</columns>
        <columns>Text2__c</columns>
        <columns>Text3__c</columns>
        <columns>Text4__c</columns>
        <columns>Text5__c</columns>
        <columns>Text6__c</columns>
        <columns>Text7__c</columns>
        <columns>Text8__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Manual</value>
        </filters>
        <label>Manual</label>
    </listViews>
    <listViews>
        <fullName>Miscellaneous</fullName>
        <columns>NAME</columns>
        <columns>Code1__c</columns>
        <columns>Code2__c</columns>
        <columns>Flag1__c</columns>
        <columns>Flag2__c</columns>
        <columns>Flag3__c</columns>
        <columns>Flag4__c</columns>
        <columns>Text1__c</columns>
        <columns>Text2__c</columns>
        <columns>Text3__c</columns>
        <columns>Text4__c</columns>
        <columns>Text5__c</columns>
        <columns>Text6__c</columns>
        <columns>Text7__c</columns>
        <columns>Text8__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Miscellaneous</value>
        </filters>
        <label>Miscellaneous</label>
    </listViews>
    <listViews>
        <fullName>Object_Settings</fullName>
        <columns>NAME</columns>
        <columns>Code1__c</columns>
        <columns>Code2__c</columns>
        <columns>Flag1__c</columns>
        <columns>Flag2__c</columns>
        <columns>Flag3__c</columns>
        <columns>Flag4__c</columns>
        <columns>Text1__c</columns>
        <columns>Text2__c</columns>
        <columns>Text3__c</columns>
        <columns>Text4__c</columns>
        <columns>Text5__c</columns>
        <columns>Text6__c</columns>
        <columns>Text7__c</columns>
        <columns>Text8__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Object Settings</value>
        </filters>
        <label>Object Settings</label>
    </listViews>
    <listViews>
        <fullName>Strategies</fullName>
        <columns>NAME</columns>
        <columns>Code1__c</columns>
        <columns>Code2__c</columns>
        <columns>Flag1__c</columns>
        <columns>Flag2__c</columns>
        <columns>Flag3__c</columns>
        <columns>Flag4__c</columns>
        <columns>Text1__c</columns>
        <columns>Text2__c</columns>
        <columns>Text3__c</columns>
        <columns>Text4__c</columns>
        <columns>Text5__c</columns>
        <columns>Text6__c</columns>
        <columns>Text7__c</columns>
        <columns>Text8__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Strategy</value>
        </filters>
        <label>Strategies</label>
    </listViews>
    <listViews>
        <fullName>URLPatterns</fullName>
        <columns>NAME</columns>
        <columns>Code1__c</columns>
        <columns>Code2__c</columns>
        <columns>Flag1__c</columns>
        <columns>Flag2__c</columns>
        <columns>Flag3__c</columns>
        <columns>Flag4__c</columns>
        <columns>Text1__c</columns>
        <columns>Text2__c</columns>
        <columns>Text3__c</columns>
        <columns>Text4__c</columns>
        <columns>Text5__c</columns>
        <columns>Text6__c</columns>
        <columns>Text7__c</columns>
        <columns>Text8__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>URLPattern</value>
        </filters>
        <label>URLPatterns</label>
    </listViews>
</CustomObject>